--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <title>Analytics Test Site</title>
   <meta charset="UTF-8">
+  
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "vev7sxw0u4");
+  </script>
+  
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -30,3 +39,4 @@
 
 </body>
 </html>
+
